@@ -7,6 +7,7 @@ CHANGES
   returns None without exceptions.
 - Add a dict of supported_drivers and their supported modes.
 - Raise ValueError for unsupported drivers and modes.
+- Remove asserts from ogrext.pyx.
 
 0.8 (2012-02-21)
 ----------------
